feat: production deployment setup with security hardening